# Discord-Bot

./: .gitignore  README.md  bdaylog.json  data.json  idea testing.py  languages.txt  main.py  pyproject.toml  snippets.py  tts.py
